# joedb

./: .gitignore  README.md  logs.jdb  pyproject.toml
fixtures/: thunderbird.csv
joedb/: __init__.py  clp.py  joedb.py
tests/: test_clp.py  test_joedb.py  test_patterns.py  test_smoke.py
