[tool.poetry]
name = "joedb"
version = "0.1.0"
description = ""
authors = ["Joe Reuter <flash1293@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyzstd = "^0.16.2"
humanize = "^4.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pandas = "^2.2.3"
pyarrow = "^18.0.0"
ppretty = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s"
